PA_Education/TestMenifest/force-app/main/default/objects/ShipmentDetail__c/ShipmentDetail__c.object-meta.xml
<CustomObject>
    <label>출하 상세</label>
    <nameField>
        <displayFormat>SMD-{000000}</displayFormat>
        <label>출하상세코드</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>