PA_Education/TestMenifest/force-app/main/default/objects/ShipmentDetail__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <label>출하</label>
    <referenceTo>Shipment__c</referenceTo>
    <relationshipLabel>출하 상세</relationshipLabel>
    <relationshipName>ShipmentDetail</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>